--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
                 <h3>Front-End Developer</h3>
                 <span class="animate" style="--i:3;"></span>
             </div>
-            <p>I am a dedicated, self-assured, and eager learner. I is constantly looking for opportunities to pick up
-                the new abilities.
-                I particularly want to put my knowledge and experience in  Web Development
+            <p>I am a dedicated, self-assured, and eager learner, constantly seeking opportunities to acquire new skills. I am especially keen to leverage my knowledge and experience in Web Development
+
             
                 <span class="animate" style="--i:4;"></span>
             </p>
@@ -279,5 +278,6 @@
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
